@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/psad
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.81 2014/11/03 10:26:38 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/psad/ChangeLog,v 1.82 2014/11/03 10:50:11 jer Exp $
+
+  03 Nov 2014; Jeroen Roovers <jer@gentoo.org> -psad-2.2.2-r1.ebuild:
+  Old.
 
   03 Nov 2014; Mikle Kolyada <zlogene@gentoo.org> psad-2.2.3.ebuild:
   ppc stable wrt bug #510584
